; ModuleID = '/home/carl/AnghaBench/tig/src/extr_string.c_utf8_char_length.c'
source_filename = "/home/carl/AnghaBench/tig/src/extr_string.c_utf8_char_length.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@utf8_bytes = common dso_local global i8* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local zeroext i8 @utf8_char_length(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = load i8, i8* %4, align 1
  %6 = zext i8 %5 to i32
  store i32 %6, i32* %3, align 4
  %7 = load i8*, i8** @utf8_bytes, align 8
  %8 = load i32, i32* %3, align 4
  %9 = sext i32 %8 to i64
  %10 = getelementptr inbounds i8, i8* %7, i64 %9
  %11 = load i8, i8* %10, align 1
  ret i8 %11
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
